Moving Work data query to separate file and pulled into homepage static props and components with minimal code. Fixing flicker of RGB hover effect.

--- a/styles/html-scss/layout/_main-nav.scss
+++ b/styles/html-scss/layout/_main-nav.scss
@@ -16,7 +16,7 @@
 			position: absolute;
 			border-radius: 50%;
 			z-index: 0;
-			transition: opacity 0.75s;
+			transition: opacity 0.15s;
 			animation: gradientbg 2s linear infinite;
 		}
 		&::before {
