--- a/styles/html-scss/modules/_buttons.scss
+++ b/styles/html-scss/modules/_buttons.scss
@@ -111,7 +111,7 @@
 		width: calc(100% - 30px);
 		height: 50%;
 		z-index: 1;
-		transition: opacity 0.25s;
+		transition: opacity 0.15s;
 		transform: translateY(-50%);
 		animation: gradientbg 2s linear infinite;
 	}
