--- a/styles/html-scss/modules/_social-nav.scss
+++ b/styles/html-scss/modules/_social-nav.scss
@@ -18,7 +18,7 @@
 				width: 50%;
 				height: 50%;
 				z-index: 1;
-				transition: opacity 0.25s;
+				transition: opacity 0.15s;
 				transform: translateY(-50%);
 				animation: socialgradientbg 2s linear infinite;
 			}
